--- a/CallIT.Web/CallIT.Web.csproj
+++ b/CallIT.Web/CallIT.Web.csproj
@@ -151,6 +151,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="BusinessLogic\CallITBL.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Data\call.cs">
       <DependentUpon>CallITData.tt</DependentUpon>
@@ -179,6 +180,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\callModel.cs" />
+    <Compile Include="Models\MessageResult.cs" />
+    <Compile Include="Models\staffModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -251,7 +255,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
