--- a/CallIT.Web/Web.config
+++ b/CallIT.Web/Web.config
@@ -70,6 +70,9 @@
   </system.codedom>
   <connectionStrings>
     <add name="CallITEntities" connectionString="metadata=res://*/Data.CallITData.csdl|res://*/Data.CallITData.ssdl|res://*/Data.CallITData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=CallIT;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+    <add name="svh-sql3" connectionString="user id=osa;data source=svh-sql3;persist security info=True;initial catalog=MEDTRAK_DATA;password=osa"/>
+    
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
