--- a/CallIT.Web/CallIT.Web.csproj
+++ b/CallIT.Web/CallIT.Web.csproj
@@ -153,6 +153,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="BusinessLogic\CallITBL.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
@@ -267,6 +268,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Views\Login\" />
     <Folder Include="Views\Staff\" />
+    <Folder Include="Views\Admin\" />
     <Folder Include="Views\_Base\" />
     <Folder Include="Views\_Error\" />
   </ItemGroup>
